# sting

./: .coverage  .gitattributes  .gitignore  LICENCE  README.md  coverage.xml  pyproject.toml  requirements.txt  temp.py
.github/workflows/: publish.yml
examples/: sting_example_run.ipynb
src/sting/: __init__.py  errors.py  extract_streamline.py  gradient_descent.py  outputs.py  stream_lines_grad.py
tests/: test_errors.py  test_gradient_descent.py  test_stream_lines_grad.py
